Changes for 1.2.7
* Added new unit attachment, isKamikaze, which will allow an air unit to use up all of its movement to go to a battle, if it wants to. (veqryn)

* Fix for bug 3052260, Ww2v2 revised subs should now roll dice correctly, instead of dying prematurely in cases where the enemy has a destroyer. (veqryn)

* Fixed suicide units combat to take into account subs and destroyers. Follows relatively simple rules compared with normal combat. (veqryn)

* Created new global property, "Defending Suicide and Munition Units Do Not Fire", which when true will stop defending suicide units from acting like suicide units: dying first round, shooting before everyone else. 
  So if true, defending suicide units act like normal units, however they still can not be taken casualty to attacks by other suicide units. (veqryn)

* Fixed various matches and places in the code to do with non-combat units, so that they will now also include isInfrastructure. (veqryn)

* Finished work on isSuicide, and also created new game property, "Suicide and Munition Casualties Restricted", which stops casualties from returning fire if true. 
  Please be aware that the the code in MustFightBattle for these two new features needs to be double checked, especially for multiplayer games. (veqryn)

* Beginning work on unit attachment "isSuicide", which will allow a unit to die at the beginning of combat. (veqryn)

* Changed "isInfrastructure" to NOT be bombable. Made it so that "canBeDamaged" is now the switch to make something bombable. (veqryn)

* Changed "isInfrastructure" to be captured when taken.  isInfrastructure will now be used in place of the planned 'isNonCombat'. (veqryn)

* Added new unit attachment, destroyedWhenCapturedBy, which is a list of players who would destroy a unit rather than capture it. New global property to activate it, "Units Can Be Destroyed Instead Of Captured". (veqryn)
